[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel_TopHeader.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel_Border_1x1.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel_Body_1x1.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel.gd" type="Script" id=5]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[node name="SelectionNotifPanel" type="MarginContainer"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_right = 184.0
margin_bottom = 56.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 184.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Header" type="TextureRect" parent="VBoxContainer"]
margin_left = 12.0
margin_right = 172.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 2 )

[node name="TopBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 184.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BodyMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 184.0
margin_bottom = 55.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BodyBackground" type="TextureRect" parent="VBoxContainer/BodyMarginer"]
margin_right = 184.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="VBoxContainer/BodyMarginer"]
margin_left = 183.0
margin_right = 184.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="VBoxContainer/BodyMarginer"]
margin_right = 1.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="LabelMarginer" type="MarginContainer" parent="VBoxContainer/BodyMarginer"]
margin_right = 184.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/margin_right = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 2
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BodyMarginer/LabelMarginer"]
margin_left = 2.0
margin_top = 5.0
margin_right = 182.0
margin_bottom = 35.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="TooltipBody" parent="VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 180.0
size_flags_horizontal = 3
default_font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
default_font_size = 16

[node name="EnterLabel" type="Label" parent="VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer"]
margin_top = 4.0
margin_right = 180.0
margin_bottom = 15.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "(Press ENTER to end selection)"

[node name="CancelLabel" type="Label" parent="VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer"]
margin_left = 27.0
margin_top = 19.0
margin_right = 153.0
margin_bottom = 30.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "(Press ESC to cancel)"

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 184.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 2
